--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,3 +4,49 @@ font: arial;
 aside {
     display: block;
 }
+
+.header {
+width: 100%;
+height: 80px;
+display: block;
+background-color: #ffffff;
+border-color: grey;
+box-sizing: border-box;
+font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+.name {
+    font: helvetica;
+    background-color: #4aaaa5;
+    position: absolute;
+    left: 20%;
+    top: 5px;
+    width: 260px;
+    height: 80px;
+    color: #ffffff;
+    text-align: center;
+    display: inline-block;
+   
+}
+
+.aboutme {
+    
+}
+
+.aboutmetext {
+        background: black;
+        color: white;
+        border-radius: 1em;
+        padding: 1em;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 600px;
+        height: auto;
+        transform: translate(-50%, -50%) }
+        
+}
+
+.image {
+
+}
