added aside box template.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,14 @@
 body {
 font: arial;
-background-image: image(assets);
+background-image:;
 }
+
 aside {
-background-color: #ffffff;
-border-color: grey;
-margin: auto;
+width: 600px;
+height: 400px;
+padding: 20px;
+margin: 100px auto;
+box-shadow: 0px 0px 10px 2px;
 }
 
 
