--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,10 @@
 .body {
 font: arial;
-background-image:;
+}
+
+.nav {
+position: absolute;
+float: left;
 }
 
 
@@ -18,7 +22,6 @@ width: 100%;
 height: 100px;
 position: absolute;
 margin-bottom: 5px;
-border: #ffffff;
 border-bottom: 2px;
 display: block;
 background-color: #ffffff;
@@ -69,5 +72,7 @@ font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .footer {
-
+color: grey;
+width: 100%;
+height: 100px;
 }
