--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,8 +10,8 @@ float: left;
 
 
 .aside {
-width: 600px;
-height: 400px;
+width: 700px;
+height: 600px;
 padding: 20px;
 margin: 100px auto;
 }
@@ -43,20 +43,22 @@ font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .aboutme {
-    top: 30%;
-    left: 28%;
+    top: auto;
+    left: au;
     position: absolute;
     color: #4aaaa5;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 
     
 }
 
 .aboutmetext {
         font-family: Arial, Helvetica, sans-serif;
+        font-size: larger;
+        position: absolute;
         color: #777777;
         border-radius: 5px;
         padding: 5px;
-        position: absolute;
         top: 50%;
         left: 50%;
         width: 600px;
