--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,13 +3,12 @@
     }
     
     .nav {
-    position: absolute
+
     }
 
     .tablink {
         float: right;
         cursor: pointer;
-        padding: 14px 16px;
         font-size: 17px;
         width: 15%;
         background-color: #ffffff;
@@ -17,10 +16,24 @@
         color: #777777;
         font-family: Arial, Helvetica, sans-serif;
         border-right: #4aaaa5 10px;  
+        padding-top: 35px;
     }
 
     
-    
+    .tablink:hover {
+      background-color: blueviolet;
+      color: white;
+    }
+
+    .tablink:active {
+      background-color: green;
+      letter-spacing: 3px;
+    }
+
+    .tablink:focus {
+      background-color: hotpink;
+      outline: none
+    }
     
     .aside {
     width: 700px;
@@ -33,7 +46,6 @@
     .header {
     width: 100%;
     height: 100px;
-    position: absolute;
     margin-bottom: 2px;
     border-bottom: 2px;
     display: block;
@@ -49,10 +61,14 @@
         position: absolute;
         left: 20%;
         width: 260px;
-        height: 80px;
+        height: 100px;
+        margin: 0px;
+        padding: 0px;
         color: #ffffff;
         text-align: center;
-        inset-block: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
     
     .subhead {
@@ -68,7 +84,6 @@
     .aboutmetext {
             font-family: Arial, Helvetica, sans-serif;
             font-size: larger;
-            position: absolute;
             color: #777777;
             border-radius: 5px;
             padding: 5px;
@@ -76,14 +91,16 @@
             left: 50%;
             width: 600px;
             height: auto;
-            transform: translate(-50%, -50%)
+            
             
             
     }
     
     .image {
-        position: absolute;
-        top: 350px;
+        float: left;
+        padding: 10px;
+        height: 200px;
+        width: auto;
         
     }
 
