--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,7 +90,7 @@
             font-size: x-large;
             color: #777777;
             border-radius: 5px;
-            padding: 5px;
+            padding: 10px;
             top: 10%;
             left: 50%;
             width: 860px;
@@ -102,8 +102,8 @@
     
     .image {
         float: left;
-        padding: 10px;
-        height: 250px;
+        padding: 20px;
+        height: 300px;
         width: auto;
         
     }
@@ -161,3 +161,47 @@ input[type=text], select, textarea {
     padding: 20px;
   }
 
+  /*PORTFOLIO CSS*/
+
+  .porttab {
+    outline: none;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .tabname {
+    background-color: #4aaaa5;
+    color: #ffffff;
+    padding: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: larger;
+    width: 100%;
+  }
+
+  .tabname:hover {
+    background-color: grey;
+    color: white;
+  }
+
+  .tabname:active {
+    background-color: #4aaaa5;
+    letter-spacing: 3px;
+  }
+
+  .tabimages {
+    height: 250px;
+    width: auto;
+    align-content: initial;
+  }
+
+  .portaside {
+    width: 960px;
+    height: 900px;
+    padding: 20px;
+    margin: 100px auto;
+    outline-width: .5px;
+    outline-style: solid;
+    outline-color: #dddddd;
+    outline-width: 1px;
+    background-color: #ffffff;
+    }
